--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "homepage": "https://github.com/kaden-wallin/breads#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-react-views": "^0.11.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   }
 }
