--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "express-react-views": "^0.11.0",
     "method-override": "^3.0.0",
+    "mongoose": "^6.7.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   }
